--- a/index.html
+++ b/index.html
@@ -1,60 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gowtham Mamdipatla - Online Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gowtham Mamdipatla - Portfolio</title>
+  <!-- Tailwind CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body class="font-sans text-gray-800">
 
-    <!-- Header Navigation -->
-    <header class="bg-gray-800 text-white">
-        <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <h1 class="text-xl font-bold">Online Portfolio</h1>
-            <nav class="space-x-4">
-                <a href="#" class="hover:text-blue-400">Home</a>
-                <a href="#" class="hover:text-blue-400">About Me</a>
-                <a href="#" class="hover:text-blue-400">Services</a>
-                <a href="#" class="hover:text-blue-400">Skill</a>
-                <a href="#" class="hover:text-blue-400">Testimonial</a>
-                <a href="#" class="hover:text-blue-400">Experience</a>
-                <a href="#" class="hover:text-blue-400">Works</a>
-                <a href="#" class="hover:text-blue-400">Blog</a>
-                <a href="#" class="hover:text-blue-400">Contact Us</a>
-            </nav>
-        </div>
-    </header>
+  <!-- Header Navigation -->
+  <header class="bg-gray-900 text-white shadow-md sticky top-0 z-50">
+    <div class="container mx-auto px-4 py-4 flex justify-between items-center">
+      <h1 class="text-xl font-extrabold tracking-wide">Gowtham’s Portfolio</h1>
+      <nav class="space-x-4 hidden md:block">
+        <a href="#home" class="hover:text-blue-400">Home</a>
+        <a href="#about" class="hover:text-blue-400">About</a>
+        <a href="#services" class="hover:text-blue-400">Services</a>
+        <a href="#skills" class="hover:text-blue-400">Skills</a>
+        <a href="#works" class="hover:text-blue-400">Works</a>
+        <a href="#contact" class="hover:text-blue-400">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-    <!-- Hero Section -->
-    <section class="bg-gray-900 text-white py-12">
-        <div class="container mx-auto px-4 flex flex-col md:flex-row items-center justify-between">
-            <div class="mb-6 md:mb-0">
-                <h2 class="text-3xl md:text-4xl font-bold mb-2">GOWTHAM MAMDIPATLA</h2>
-                <p class="text-lg max-w-xl mb-4">
-                    Hi, I am a student at Andhra Engineering College and I have to Work in The IT sectors In the domain Of Cyber Security And now Im Pursuing the Web Development because to improve the development skills and to experience the domain . I'd like...
-                </p>
-                <a href="#" class="bg-blue-500 text-white px-6 py-2 rounded hover:bg-blue-600">Hire Me</a>
-            </div>
-            <img src="Gowthams Pro .jpg" alt="Gowtham Mamdipatla" class="w-60 rounded-lg shadow-lg" />
-        </div>
-    </section>
+  <!-- Hero Section -->
+  <section id="home" class="hero-section text-white py-20">
+    <div class="container mx-auto px-4 flex flex-col md:flex-row items-center justify-between">
+      <div class="mb-8 md:mb-0">
+        <h2 class="text-4xl md:text-5xl font-bold mb-4">Hi, I’m <span class="text-yellow-300">Gowtham Mamdipatla</span></h2>
+        <p class="text-lg max-w-xl mb-6 leading-relaxed">
+          A passionate student exploring <span class="font-semibold">Web Development</span> and 
+          <span class="font-semibold">Cyber Security</span>. I love building creative solutions and learning cutting-edge technologies.
+        </p>
+        <a href="#contact" class="btn-primary">Hire Me</a>
+      </div>
+      <img src="images/gowthams-pro.jpg" alt="Gowtham Mamdipatla" class="profile-img" />
+    </div>
+  </section>
 
-    <!-- About Me -->
-    <section class="py-12 bg-white">
-        <div class="container mx-auto px-4 flex flex-col md:flex-row items-center">
-            <img src="Gowthams Pro .jpg" alt="About Me" class="w-60 rounded-full mb-6 md:mb-0 md:mr-10" />
-            <div>
-                <h3 class="text-2xl font-semibold mb-2 border-b-2 border-blue-500 w-max">ABOUT ME</h3>
-                <p class="mb-4 text-justify">
-                    I am a Developer who blends expertise with industry know-how to guide your next property development.
-                </p>
-                <p class="text-justify">
-                    Developers can integrate ChatGPT via API into web apps for interactive features like chatbots, content generators, or virtual assistants. This involves building UI elements (HTML/CSS/JavaScript), connecting them to the API via HTTP (e.g. using fetch or axios), and handling user prompts and responses in JSO  </p>
-                <a href="#" class="inline-block mt-4 bg-blue-500 text-white px-6 py-2 rounded hover:bg-blue-600">Download Resume</a>
-            </div>
-        </div>
-    </section>
+  <!-- About Me -->
+  <section id="about" class="py-16 bg-gray-100">
+    <div class="container mx-auto px-6 md:flex md:items-center">
+      <img src="images/gowthams-pro.jpg" alt="About Me" class="about-img" />
+      <div class="about-card">
+        <h3 class="section-title">About Me</h3>
+        <p class="mb-4 text-gray-700 leading-relaxed">
+          I am a dedicated Developer who thrives on combining creativity and technical skills to deliver meaningful solutions. 
+          My journey started with a deep interest in <span class="font-semibold text-blue-600">Cyber Security</span> and expanded into 
+          <span class="font-semibold text-purple-600">Web Development</span>.
+        </p>
+        <p class="text-gray-700 leading-relaxed">
+          Beyond coding, I enjoy exploring how technology shapes our world and how I can contribute to it with impactful projects.
+        </p>
 
+        <!--  Download Resume Button -->
+        <a href="resume.pdf" download class="btn-gradient">
+          📄 Download Resume
+        </a>
+      </div>
+    </div>
+  </section>
+
+  
 </body>
 </html>
