--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </p>
         <a href="#contact" class="btn-primary">Hire Me</a>
       </div>
-      <img src="images/gowthams-pro.jpg" alt="Gowtham Mamdipatla" class="profile-img" />
+      <img src="Gowthams Pro .jpg" alt="Gowtham Mamdipatla" class="profile-img" />
     </div>
   </section>
 
@@ -57,7 +57,7 @@
         </p>
 
         <!--  Download Resume Button -->
-        <a href="resume.pdf" download class="btn-gradient">
+        <a href="G Resume.pdf" download class="btn-gradient">
           📄 Download Resume
         </a>
       </div>
