--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!-- About Me -->
   <section id="about" class="py-16 bg-gray-100">
     <div class="container mx-auto px-6 md:flex md:items-center">
-      <img src="images/gowthams-pro.jpg" alt="About Me" class="about-img" />
+      <img src="Gowthams Pro .jpg" alt="About Me" class="about-img" />
       <div class="about-card">
         <h3 class="section-title">About Me</h3>
         <p class="mb-4 text-gray-700 leading-relaxed">
